@@ -1,0 +1,4 @@
+desc=Disk quota monitoring for mailboxes
+html=The Disk Quota Monitoring page can now also be used to find mailboxes that are approaching or over their quota, and can send email to domain owners and individual mailboxes as well as the master admin.
+master=1
+link=edit_newquotas.cgi
